# SomeTemplates

./: CMakeLists.txt  Makefile.txt  README.md  Running Spark Jobs Locally.txt  reportTemplate.tex
